--- a/web.html
+++ b/web.html
@@ -37,7 +37,7 @@
     	<address>
         	<p class="sub-contact">Contact Us:</p>
         	<a href="contact.html">support@baxterdash.com</a>
-        	<p class="num">480-407-6610</p>
+        	<p class="num">480.648.3552</p>
         </address>
     </header>
     
