fix margins gh-pages

--- a/onsite.html
+++ b/onsite.html
@@ -3,6 +3,7 @@
 <head>
   <title>baxterdash.com - onsite</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
+  <meta name="viewport" content="width=device-width" />
 </head>
 
 <body>
@@ -62,8 +63,8 @@
     </section>
 
     <section class="custom-builds content-secondary">
-        <h3 class="headline-banner">Custom Builds</h3>
         <img src="images/custom-build3.png" alt="Custom Built PC">
+        <h3 class="headline-banner">Custom Builds</h3>
         <p>Ready for a custom build?</p>
         <p>Whether you want an efficient business machine or a blazing fast gaming rig, Baxterdash has the answer!</p>
         <p>Sure, you could buy a cookie cutter machine from a department store, but do you really know what you're getting?
